[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plantsimpath"
version = "0.0.5"
description = "A Python helper class to make Plantsim Path usage accessible."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Luca Bernstiel", email = "bernstiel@gmx.de"},
]
keywords = ["plant", "siemens", "simulation", "path"]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy",
    "types-pywin32",
    "pandas-stubs",
    "types-psutil",
    "loguru",
    "plantsimpath",
    "packaging",
    "bump-my-version"
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/malun22/plantsim-path"
Documentation = "https://malun22.github.io/plantsimpath/"
Repository = "https://github.com/malun22/plantsim-path"


[tool.setuptools.packages.find]
where = ["."]
include = ["plantsimpath*"]

[tool.setuptools.package-data]
plantsimpath = ["py.typed"]