[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plantsimpath"
version = "0.0.6"
description = "A Python helper class to make Plantsim Path usage accessible."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Luca Bernstiel", email = "bernstiel@gmx.de"},
]
keywords = ["plant", "siemens", "simulation", "path"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "bump-my-version"
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/malun22/plantsim-path"
Documentation = "https://malun22.github.io/plantsimpath/"
Repository = "https://github.com/malun22/plantsim-path"


[tool.setuptools.packages.find]
where = ["."]
include = ["plantsimpath*"]

[tool.setuptools.package-data]
plantsimpath = ["py.typed"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]

[tool.ruff.lint.isort]
known-first-party = ["optuna", "tests", "docs"]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true